# hiddb

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  TODO.md  build.sh  client.py  demo.py  openapi.yaml  test.sh
.github/workflows/: production.yml  staging.yml
benches/: all.rs
src/: distance.rs  index_store.rs  lib.rs  main.rs  reverse_sorted_list.rs  sorted_list.rs  utils.rs
src/api/: handlers.rs  types.rs
src/db/: dbtypes.rs  mod.rs
src/hiddb/: collection.rs  document.rs  index.rs  mod.rs
src/hnsw/: builder.rs  document.rs  index.rs  key.rs  mod.rs
src/metrics/: middleware.rs  mod.rs  rocksdb.rs  types.rs
src/tests/: all.rs  collection.rs  helpers.rs  mod.rs
